[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["asynchronous", "gui"]
description = "Asynchronous, GTK+-based, GUI library, inspired by Elm, written in Rust"
homepage = "https://relm.antoyo.xyz/"
documentation = "https://docs.rs/relm/"
license = "MIT"
name = "relm"
readme = "README.adoc"
repository = "https://github.com/antoyo/relm"
version = "0.21.0"
edition = "2018"

[dependencies]
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.13" }
fragile = "1.0"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gobject-sys = "^0.10.0"
libc = "^0.2.54"
log = "^0.4.6"

[features]
hidpi = ["cairo-rs/v1_16"]

[dependencies.gtk]
package = "gtk4"
version = "0.1"
git = " https://github.com/gtk-rs/gtk4-rs" 
